Drop fields from scorecard, regen pdf

--- a/first/first.ipynb
+++ b/first/first.ipynb
@@ -135,7 +135,7 @@
     "             'positin1', 'order', 'partner', 'pid', 'match',\n",
     "             'zipcode', # zipcode -> income\n",
     "             #'undergra', -> {mn_sat, tuition}\n",
-    "             'like', #TODO: drop it or no???\n",
+    "             'attr', 'sinc', 'intel', 'fun', 'amb', 'shar', 'like', 'prob',\n",
     "             'dec',\n",
     "             'match',\n",
     "             'you_call', 'them_cal', 'date_3', 'numdat_3', 'num_in_3',\n",
@@ -214,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fem_model_80 = model(X[X.gender == 1], Y[X.gender == 1], test_size=0.2, min_samples_split=800)\n",
+    "fem_model_80 = model(X[X.gender == 1], Y[X.gender == 1], test_size=0.2, min_samples_split=300)\n",
     "vizualize(fem_model_80, out_file=\"fem_80\")\n",
     "vizualize(fem_model_80)"
    ]
@@ -225,7 +225,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fem_model_20 = model(X[X.gender == 1], Y[X.gender == 1], test_size=0.8, min_samples_split=300)\n",
+    "fem_model_20 = model(X[X.gender == 1], Y[X.gender == 1], test_size=0.8, min_samples_split=150)\n",
     "vizualize(fem_model_20, out_file=\"fem_20\")\n",
     "vizualize(fem_model_20)"
    ]
@@ -236,7 +236,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "man_model_80 = model(X[X.gender == 0], Y[X.gender == 0], test_size=0.2, min_samples_split=800)\n",
+    "man_model_80 = model(X[X.gender == 0], Y[X.gender == 0], test_size=0.2, min_samples_split=300)\n",
     "vizualize(man_model_80, out_file=\"man_80\")\n",
     "vizualize(man_model_80)"
    ]
