--- a/first/first.ipynb
+++ b/first/first.ipynb
@@ -240,6 +240,17 @@
     "vizualize(man_model_80, out_file=\"man_80\")\n",
     "vizualize(man_model_80)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uni_model_80 = model(X, Y, test_size=0.2, min_samples_split=420)\n",
+    "vizualize(uni_model_80, out_file=\"uni_80\")\n",
+    "vizualize(uni_model_80)"
+   ]
   }
  ],
  "metadata": {
