first: make model of 80, remove prefix

--- a/first/first.ipynb
+++ b/first/first.ipynb
@@ -172,7 +172,7 @@
    "source": [
     "def model(X,y,test_size=0.2,random_state=0,min_samples_split=300):\n",
     "    X_train, X_test, y_train, y_test = train_test_split(\n",
-    "     X, y, test_size=test_size, random_state=42)\n",
+    "     X, y, test_size=test_size, random_state=random_state)\n",
     "\n",
     "    clf = tree.DecisionTreeClassifier(min_samples_split=min_samples_split)\n",
     "    clf = clf.fit(X_train, y_train)\n",
@@ -214,9 +214,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fem_model_80 = model(X[X.gender == 1], Y[X.gender == 1], test_size=0.2, min_samples_split=300)\n",
-    "vizualize(fem_model_80, out_file=\"fem_80\")\n",
-    "vizualize(fem_model_80)"
+    "fem_model = model(X[X.gender == 1], Y[X.gender == 1], test_size=0.2, min_samples_split=300, random_state=69)\n",
+    "vizualize(fem_model, out_file=\"fem\")\n",
+    "vizualize(fem_model)"
    ]
   },
   {
@@ -225,9 +225,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fem_model_20 = model(X[X.gender == 1], Y[X.gender == 1], test_size=0.8, min_samples_split=150)\n",
-    "vizualize(fem_model_20, out_file=\"fem_20\")\n",
-    "vizualize(fem_model_20)"
+    "fem_model_other = model(X[X.gender == 1], Y[X.gender == 1], test_size=0.2, min_samples_split=300, random_state=42)\n",
+    "vizualize(fem_model_other, out_file=\"fem_other\")\n",
+    "vizualize(fem_model_other)"
    ]
   },
   {
@@ -236,9 +236,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "man_model_80 = model(X[X.gender == 0], Y[X.gender == 0], test_size=0.2, min_samples_split=300)\n",
-    "vizualize(man_model_80, out_file=\"man_80\")\n",
-    "vizualize(man_model_80)"
+    "man_model = model(X[X.gender == 0], Y[X.gender == 0], test_size=0.2, min_samples_split=300)\n",
+    "vizualize(man_model, out_file=\"man\")\n",
+    "vizualize(man_model)"
    ]
   },
   {
@@ -247,9 +247,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "uni_model_80 = model(X, Y, test_size=0.2, min_samples_split=420)\n",
-    "vizualize(uni_model_80, out_file=\"uni_80\")\n",
-    "vizualize(uni_model_80)"
+    "uni_model = model(X, Y, test_size=0.2, min_samples_split=420)\n",
+    "vizualize(uni_model, out_file=\"uni\")\n",
+    "vizualize(uni_model)"
    ]
   }
  ],
