--- a/first/first.ipynb
+++ b/first/first.ipynb
@@ -157,7 +157,10 @@
     "        # fill in missing values\n",
     "        if col == 'field_cd' or \\\n",
     "            col == 'gender' or \\\n",
-    "            col == 'CHANGE ME': # TODO: add more classifiable fields\n",
+    "            col == 'undergrd' or \\\n",
+    "            col == 'race' or \\\n",
+    "            col == 'from' or \\\n",
+    "            col == 'career_c': # TODO: add more classifiable fields\n",
     "            X[[col]]=Imputer(missing_values='NaN', strategy='most_frequent', axis=0).fit_transform(X[[col]])\n",
     "        else:\n",
     "            X[[col]]=Imputer(missing_values='NaN', strategy='mean', axis=0).fit_transform(X[[col]])\n",
