--- a/first/first.ipynb
+++ b/first/first.ipynb
@@ -135,7 +135,7 @@
     "             'positin1', 'order', 'partner', 'pid', 'match',\n",
     "             'zipcode', # zipcode -> income\n",
     "             #'undergra', -> {mn_sat, tuition}\n",
-    "             'attr', 'sinc', 'intel', 'fun', 'amb', 'shar', 'like', 'prob',\n",
+    "             'attr', 'sinc', 'intel', 'fun', 'amb', 'shar', 'like', 'prob', 'met',\n",
     "             'dec',\n",
     "             'match',\n",
     "             'you_call', 'them_cal', 'date_3', 'numdat_3', 'num_in_3',\n",
