--- a/first/first.ipynb
+++ b/first/first.ipynb
@@ -155,11 +155,11 @@
     "    elif X[col].dtypes=='float64' and X[col].isnull().values.any():\n",
     "        #print('Imputing {0}'.format(col))\n",
     "        # fill in missing values\n",
-    "        if col == 'field_cd' or \\\n",
-    "            col == 'gender' or \\\n",
-    "            col == 'undergrd' or \\\n",
-    "            col == 'race' or \\\n",
-    "            col == 'from' or \\\n",
+    "        if col == 'field_cd' or \n",
+    "            col == 'gender' or \n",
+    "            col == 'undergrd' or \n",
+    "            col == 'race' or \n",
+    "            col == 'from' or \n",
     "            col == 'career_c': # TODO: add more classifiable fields\n",
     "            X[[col]]=Imputer(missing_values='NaN', strategy='most_frequent', axis=0).fit_transform(X[[col]])\n",
     "        else:\n",
