--- a/first/first.ipynb
+++ b/first/first.ipynb
@@ -173,7 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def model(X,y,test_size=0.2,random_state=0,min_samples_split=300):\n",
+    "def model(X,y,test_size=0.2,random_state=0,min_samples_split=0.1):\n",
     "    X_train, X_test, y_train, y_test = train_test_split(\n",
     "     X, y, test_size=test_size, random_state=random_state)\n",
     "\n",
@@ -188,7 +188,7 @@
     "    Accuracy: {0:.2f}%\n",
     "    True negatives: {1:.2f}%\\tFalse negatives: {2:.2f}%\n",
     "    False positives: {3:.2f}%\\tTrue positives: {4:.2f}%\n",
-    "    \"\"\".format(accuracy, tn, fp, fn, tp))\n",
+    "    \"\"\".format(accuracy*100, tn*100, fp*100, fn*100, tp*100))\n",
     "\n",
     "    return clf"
    ]
@@ -217,7 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fem_model = model(X[X.gender == 1], Y[X.gender == 1], test_size=0.2, min_samples_split=300, random_state=69)\n",
+    "fem_model = model(X[X.gender == 1], Y[X.gender == 1], test_size=0.2, random_state=69)\n",
     "vizualize(fem_model, out_file=\"fem\")\n",
     "vizualize(fem_model)"
    ]
@@ -228,7 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fem_model_other = model(X[X.gender == 1], Y[X.gender == 1], test_size=0.2, min_samples_split=300, random_state=42)\n",
+    "fem_model_other = model(X[X.gender == 1], Y[X.gender == 1], test_size=0.2, random_state=42)\n",
     "vizualize(fem_model_other, out_file=\"fem_other\")\n",
     "vizualize(fem_model_other)"
    ]
@@ -239,7 +239,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "man_model = model(X[X.gender == 0], Y[X.gender == 0], test_size=0.2, min_samples_split=300)\n",
+    "man_model = model(X[X.gender == 0], Y[X.gender == 0], test_size=0.2)\n",
     "vizualize(man_model, out_file=\"man\")\n",
     "vizualize(man_model)"
    ]
@@ -250,7 +250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "uni_model = model(X, Y, test_size=0.2, min_samples_split=420)\n",
+    "uni_model = model(X, Y, test_size=0.2)\n",
     "vizualize(uni_model, out_file=\"uni\")\n",
     "vizualize(uni_model)"
    ]
