--- a/first/first.ipynb
+++ b/first/first.ipynb
@@ -155,12 +155,12 @@
     "    elif X[col].dtypes=='float64' and X[col].isnull().values.any():\n",
     "        #print('Imputing {0}'.format(col))\n",
     "        # fill in missing values\n",
-    "        if col == 'field_cd' or \n",
-    "            col == 'gender' or \n",
-    "            col == 'undergrd' or \n",
-    "            col == 'race' or \n",
-    "            col == 'from' or \n",
-    "            col == 'career_c': # TODO: add more classifiable fields\n",
+    "        if col == 'field_cd' or \\\n",
+    "            col == 'gender' or \\\n",
+    "            col == 'undergrd' or \\\n",
+    "            col == 'race' or \\\n",
+    "            col == 'from' or \\\n",
+    "            col == 'career_c':\n",
     "            X[[col]]=Imputer(missing_values='NaN', strategy='most_frequent', axis=0).fit_transform(X[[col]])\n",
     "        else:\n",
     "            X[[col]]=Imputer(missing_values='NaN', strategy='mean', axis=0).fit_transform(X[[col]])\n",
@@ -173,7 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def model(X,y,test_size=0.2,random_state=0,min_samples_split=0.1):\n",
+    "def model(X,y,test_size=0.2,random_state=0,min_samples_split=0.1, accuracy_file=None):\n",
     "    X_train, X_test, y_train, y_test = train_test_split(\n",
     "     X, y, test_size=test_size, random_state=random_state)\n",
     "\n",
@@ -184,12 +184,14 @@
     "\n",
     "    accuracy = metrics.accuracy_score(y_test, y_predict)\n",
     "    tn, fp, fn, tp = metrics.confusion_matrix(y_test, y_predict).ravel()/len(y_test)\n",
-    "    print(\"\"\"\n",
-    "    Accuracy: {0:.2f}%\n",
-    "    True negatives: {1:.2f}%\\tFalse negatives: {2:.2f}%\n",
-    "    False positives: {3:.2f}%\\tTrue positives: {4:.2f}%\n",
-    "    \"\"\".format(accuracy*100, tn*100, fp*100, fn*100, tp*100))\n",
-    "\n",
+    "    accuracy_str = \"\"\"Accuracy: {0:.2f}%\n",
+    "True negatives: {1:.2f}%\\tFalse negatives: {2:.2f}%\n",
+    "False positives: {3:.2f}%\\tTrue positives: {4:.2f}%\\n\"\"\".format(\n",
+    "        accuracy*100, tn*100, fp*100, fn*100, tp*100)\n",
+    "    print(accuracy_str)\n",
+    "    if not accuracy_file == None:\n",
+    "        with open(accuracy_file, 'w') as f:\n",
+    "            f.write(accuracy_str)\n",
     "    return clf"
    ]
   },
@@ -217,7 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fem_model = model(X[X.gender == 1], Y[X.gender == 1], test_size=0.2, random_state=69)\n",
+    "fem_model = model(X[X.gender == 1], Y[X.gender == 1], test_size=0.2, random_state=69, accuracy_file=\"fem_accuracy.txt\")\n",
     "vizualize(fem_model, out_file=\"fem\")\n",
     "vizualize(fem_model)"
    ]
@@ -228,7 +230,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fem_model_other = model(X[X.gender == 1], Y[X.gender == 1], test_size=0.2, random_state=42)\n",
+    "fem_model_other = model(X[X.gender == 1], Y[X.gender == 1], test_size=0.2, random_state=42, accuracy_file=\"fem_other_accuracy.txt\")\n",
     "vizualize(fem_model_other, out_file=\"fem_other\")\n",
     "vizualize(fem_model_other)"
    ]
@@ -239,7 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "man_model = model(X[X.gender == 0], Y[X.gender == 0], test_size=0.2)\n",
+    "man_model = model(X[X.gender == 0], Y[X.gender == 0], test_size=0.2, accuracy_file='man_accuracy.txt')\n",
     "vizualize(man_model, out_file=\"man\")\n",
     "vizualize(man_model)"
    ]
@@ -250,7 +252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "uni_model = model(X, Y, test_size=0.2)\n",
+    "uni_model = model(X, Y, test_size=0.2, accuracy_file='uni_accuracy.txt')\n",
     "vizualize(uni_model, out_file=\"uni\")\n",
     "vizualize(uni_model)"
    ]
