--- a/first/first.ipynb
+++ b/first/first.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np"
@@ -11,8 +13,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt"
@@ -20,8 +24,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -29,8 +35,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import math"
@@ -38,8 +46,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn import tree, metrics, svm"
@@ -47,8 +57,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split"
@@ -56,8 +68,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import LabelBinarizer, Imputer"
@@ -65,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,8 +88,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "input_file=\"data.csv\""
@@ -83,8 +99,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = pd.read_csv(input_file, header = 0, sep=',', thousands=',')"
@@ -92,8 +110,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ages = df[['iid','age']].groupby(['iid']).mean()"
@@ -103,23 +123,41 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "matches = df[['age', 'pid', 'match']].rename({'age': 'sAge'}, axis='columns')\n",
-    "matches['pAge'] = matches.pid.apply(lambda x: math.nan if math.isnan(x) else ages.age[x])\n",
-    "matches = matches.drop(['pid'], axis=1).dropna()\n",
-    "matches.plot.hexbin(x='sAge', y='pAge', C='match', cmap=plt.cm.cool, reduce_C_function=np.mean, gridsize=22, sharex=False, sharey=False)\n",
-    "plt.savefig('plot.pdf', format='pdf')\n",
-    "plt.savefig('plot.png', dpi=400)\n",
-    "plt.show()"
+    "def impute(X):\n",
+    "    # Copy to avoid looping over the array we're modifying\n",
+    "    cols = X.columns.values\n",
+    "    for col in cols:\n",
+    "        if X[col].dtypes=='object':\n",
+    "            #print('Classifying {0}'.format(col))\n",
+    "            X = X.drop(col, axis=1)\n",
+    "            # This is really heavy\n",
+    "            #classes = X[col].str.get_dummies().rename(columns=lambda x: 'field-{0}'.format(x).replace(' ',''))\n",
+    "            #X = pd.concat([X,classes])\n",
+    "        elif X[col].dtypes=='float64' and X[col].isnull().values.any():\n",
+    "            #print('Imputing {0}'.format(col))\n",
+    "            # fill in missing values\n",
+    "            if col == 'field_cd' or \\\n",
+    "                col == 'gender' or \\\n",
+    "                col == 'undergrd' or \\\n",
+    "                col == 'race' or \\\n",
+    "                col == 'from' or \\\n",
+    "                col == 'career_c':\n",
+    "                X[[col]]=Imputer(missing_values='NaN', strategy='most_frequent', axis=0).fit_transform(X[[col]])\n",
+    "            else:\n",
+    "                X[[col]]=Imputer(missing_values='NaN', strategy='mean', axis=0).fit_transform(X[[col]])\n",
+    "    return X"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Preprocess data\n",
@@ -135,49 +173,32 @@
     "             'positin1', 'order', 'partner', 'pid', 'match',\n",
     "             'zipcode', # zipcode -> income\n",
     "             #'undergra', -> {mn_sat, tuition}\n",
-    "             'attr', 'sinc', 'intel', 'fun', 'amb', 'shar', 'like', 'prob', 'met',\n",
+    "             'attr', 'sinc', 'intel', 'fun', 'amb', 'shar', 'like', 'prob',\n",
     "             'dec',\n",
     "             'match',\n",
+    "             'pAge',\n",
+    "             'gender',\n",
     "             'you_call', 'them_cal', 'date_3', 'numdat_3', 'num_in_3',\n",
     "            ], axis=1, inplace=True)\n",
     "\n",
     "Y = df['dec']\n",
     "\n",
-    "# Copy to avoid looping over the array we're modifying\n",
-    "cols = X.columns.values\n",
-    "for col in cols:\n",
-    "    if X[col].dtypes=='object':\n",
-    "        #print('Classifying {0}'.format(col))\n",
-    "        X = X.drop(col, axis=1)\n",
-    "        # This is really heavy\n",
-    "        #classes = X[col].str.get_dummies().rename(columns=lambda x: 'field-{0}'.format(x).replace(' ',''))\n",
-    "        #X = pd.concat([X,classes])\n",
-    "    elif X[col].dtypes=='float64' and X[col].isnull().values.any():\n",
-    "        #print('Imputing {0}'.format(col))\n",
-    "        # fill in missing values\n",
-    "        if col == 'field_cd' or \\\n",
-    "            col == 'gender' or \\\n",
-    "            col == 'undergrd' or \\\n",
-    "            col == 'race' or \\\n",
-    "            col == 'from' or \\\n",
-    "            col == 'career_c':\n",
-    "            X[[col]]=Imputer(missing_values='NaN', strategy='most_frequent', axis=0).fit_transform(X[[col]])\n",
-    "        else:\n",
-    "            X[[col]]=Imputer(missing_values='NaN', strategy='mean', axis=0).fit_transform(X[[col]])\n",
-    "        "
+    "X = impute(X)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "def model(X,y,test_size=0.2,random_state=0,min_samples_split=0.1, accuracy_file=None):\n",
+    "def model(X,y,test_size=0.2,random_state=0,min_samples_split=0.1, max_depth=8, accuracy_file=None):\n",
     "    X_train, X_test, y_train, y_test = train_test_split(\n",
     "     X, y, test_size=test_size, random_state=random_state)\n",
     "\n",
-    "    clf = tree.DecisionTreeClassifier(min_samples_split=min_samples_split)\n",
+    "    clf = tree.DecisionTreeClassifier(min_samples_split=min_samples_split, max_depth=max_depth)\n",
     "    clf = clf.fit(X_train, y_train)\n",
     "\n",
     "    y_predict = clf.predict(X_test)\n",
@@ -198,13 +219,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "def vizualize(model, out_file=None):\n",
+    "def vizualize(model, columns=X.columns, out_file=None):\n",
     "    graph = graphviz.Source(\n",
     "        tree.export_graphviz(model, out_file=None,\n",
-    "                                feature_names=X.columns,\n",
+    "                                feature_names=columns,\n",
     "                                filled=True, rounded=True,\n",
     "                                special_characters=True))\n",
     "    if not out_file == None:\n",
@@ -216,10 +239,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "fem_model = model(X[X.gender == 1], Y[X.gender == 1], test_size=0.2, random_state=69, accuracy_file=\"fem_accuracy.txt\")\n",
+    "fem_model = model(X[df.gender == 1], Y[df.gender == 1], test_size=0.2, random_state=69, accuracy_file=\"fem_accuracy.txt\")\n",
     "vizualize(fem_model, out_file=\"fem\")\n",
     "vizualize(fem_model)"
    ]
@@ -227,10 +252,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "fem_model_other = model(X[X.gender == 1], Y[X.gender == 1], test_size=0.2, random_state=42, accuracy_file=\"fem_other_accuracy.txt\")\n",
+    "fem_model_other = model(X[df.gender == 1], Y[df.gender == 1], test_size=0.2, random_state=42, accuracy_file=\"fem_other_accuracy.txt\")\n",
     "vizualize(fem_model_other, out_file=\"fem_other\")\n",
     "vizualize(fem_model_other)"
    ]
@@ -238,10 +266,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "man_model = model(X[X.gender == 0], Y[X.gender == 0], test_size=0.2, accuracy_file='man_accuracy.txt')\n",
+    "man_model = model(X[df.gender == 0], Y[df.gender == 0], test_size=0.2, accuracy_file='man_accuracy.txt')\n",
     "vizualize(man_model, out_file=\"man\")\n",
     "vizualize(man_model)"
    ]
@@ -249,12 +279,75 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "uni_model = model(X, Y, test_size=0.2, accuracy_file='uni_accuracy.txt')\n",
     "vizualize(uni_model, out_file=\"uni\")\n",
     "vizualize(uni_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# 2.2\n",
+    "for r in X.itertuples(index=False):\n",
+    "    men = man_model.predict([r])[0]==1\n",
+    "    uni = uni_model.predict([r])[0]==1\n",
+    "    if not men == uni:\n",
+    "        print(\"\"\"men: {0}\n",
+    "unisex: {1}\n",
+    "for row:\n",
+    "{2}\"\"\".format(men, uni, r))\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "X['pAge'] = df['pAge']\n",
+    "X['ageDiff'] = X[['pAge', 'age']].apply(lambda x: abs(x[0]-x[1]), axis=1)\n",
+    "X = impute(X.drop(['pAge', 'age'], axis=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "fem_model_feat = model(X[df.gender == 1], Y[df.gender == 1], test_size=0.2, random_state=42, accuracy_file=\"fem_feat_accuracy.txt\")\n",
+    "vizualize(fem_model_feat, columns=X.columns, out_file=\"fem_feat\")\n",
+    "vizualize(fem_model_feat, columns=X.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "man_model_feat = model(X[df.gender == 0], Y[df.gender == 0], test_size=0.2, random_state=42, accuracy_file='man_feat_accuracy.txt')\n",
+    "vizualize(man_model_feat, columns=X.columns, out_file=\"man_feat\")\n",
+    "vizualize(man_model_feat, columns=X.columns)"
    ]
   }
  ],
