second: add elift, graphs and shit

--- a/second/Second.ipynb
+++ b/second/Second.ipynb
@@ -299,16 +299,71 @@
     "nobias_corr.head(10).append(nobias_corr.tail(10)).plot.bar()\n",
     "plt.show()\n",
     "\n",
-    "printDiscriminationScore('gender', *discriminationScore(df_dec[df_dec.gender == 1]))\n",
-    "\n",
+    "printDiscriminationScore('gender', *discriminationScore(df_dec[df_dec.gender == 1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "not_equal = df_dec[df_dec.nobias_dec != df_dec.uni_dec]\n",
+    "not_equal_mean = not_equal.mean().drop(['uni_dec', 'nobias_dec', 'dec'])\n",
+    "df_dec_mean = df_dec.mean().drop(['uni_dec', 'nobias_dec', 'dec'])\n",
     "\n",
-    "### Cases where model decisions differ\n",
-    "print(\"Average values:\")\n",
-    "display(not_equal.mean().drop(['uni_dec', 'nobias_dec']).sort_values().head(60))\n",
-    "print()\n",
-    "print(\"mn_sat stats:\")\n",
-    "display(not_equal.mn_sat.describe())"
+    "### Relative difference in means of attributes between general data set and cases, where model decisions differ\n",
+    "not_equal_prop = (not_equal_mean/df_dec_mean).sort_values()\n",
+    "not_equal_prop.head(5).append(not_equal_prop.tail(5)).plot.bar()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"In the cases, where decision between model differs:\")\n",
+    "print(\"Gender:\")\n",
+    "not_equal.gender.value_counts().plot.bar()\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"Sports:\")\n",
+    "not_equal.sports.value_counts().plot.bar()\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"Gaming:\")\n",
+    "not_equal.gaming.value_counts().plot.bar()\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"Excercise:\")\n",
+    "not_equal.exercise.value_counts().plot.bar()\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"Race:\")\n",
+    "not_equal.race.value_counts().plot.bar()\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"amb1_1:\")\n",
+    "not_equal.amb1_1.value_counts().plot.bar()\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"amb2_1:\")\n",
+    "not_equal.amb2_1.value_counts().plot.bar()\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"amb4_1:\")\n",
+    "not_equal.amb4_1.value_counts().plot.bar()\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"shopping:\")\n",
+    "not_equal.shopping.value_counts().plot.bar()\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"career_c\")\n",
+    "not_equal.career_c.value_counts().plot.bar()\n",
+    "plt.show()"
    ]
   },
   {
@@ -322,18 +377,24 @@
     "### Pearson coefficent of correlation between gender and attributes\n",
     "corr = df.corr()['gender'].drop('gender').sort_values()\n",
     "corr.head(13).append(corr.tail(13)).plot.bar()\n",
-    "plt.show()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def computeElift(df, A, B, C):\n",
+    "    return (df.query('{0} and {1} and {2}'.format(A,B,C)).count()/df.query('{0} and {1}'.format(B,C)).count())[0]\n",
     "\n",
-    "#male_mean = df[df.gender == Gender.MALE].mean()\n",
-    "#fem_mean = df[df.gender == Gender.FEMALE].mean()\n",
-    "\n",
-    "# Difference in attribute means in percent:\n",
-    "#diff = ((male_mean-fem_mean)/male_mean).drop('gender')\n",
-    "#display(diff.sort_values()*100)\n",
-    "#(male_mean-).drop(columns=['gender']).sort_values()\n",
-    "\n",
-    "#df.corr()['gender'].drop('gender').sort_values()\n",
-    "#df.corr()['gender'].drop('gender').sort_values()[10:]\n"
+    "elift = computeElift(df, 'amb1_1 > {0}'.format(df.amb1_1.mean()), 'age > 20 and age < 40', 'gender == {0}'.format(Gender.FEMALE))\n",
+    "print('''Elift for\n",
+    "A: amb1_1 > {0}\n",
+    "B: 20 < age < 40\n",
+    "C: gender == 0 (female)\n",
+    "is: {1}'''.format(df.amb1_1.mean(), elift))"
    ]
   }
  ],
