second: compute elift properly

--- a/second/Second.ipynb
+++ b/second/Second.ipynb
@@ -387,7 +387,9 @@
    "outputs": [],
    "source": [
     "def computeElift(df, A, B, C):\n",
-    "    return (df.query('{0} and {1} and {2}'.format(A,B,C)).count()/df.query('{0} and {1}'.format(B,C)).count())[0]\n",
+    "    AB_df = df.query('{0} and {1}'.format(A,B))\n",
+    "    B_df = df.query(B)\n",
+    "    return ((AB_df.query(C).count()/AB_df.count()) / (B_df.query(C).count()/ B_df.count()))[0]\n",
     "\n",
     "elift = computeElift(df, 'amb1_1 > {0}'.format(df.amb1_1.mean()), 'age > 20 and age < 40', 'gender == {0}'.format(Gender.FEMALE))\n",
     "print('''Elift for\n",
