fourth: show_rank -> display_rank

--- a/fourth/Fourth.ipynb
+++ b/fourth/Fourth.ipynb
@@ -113,7 +113,7 @@
    "source": [
     "base = pagerank(G)\n",
     "vizualize(base)\n",
-    "show_rank(base)"
+    "display_rank(base)"
    ]
   },
   {
@@ -133,7 +133,7 @@
     "Gx.remove_edges_from(random.sample(G.edges(), 20*G.number_of_edges()//100))\n",
     "pr = pagerank(Gx)\n",
     "vizualize(pr)\n",
-    "show_rank(pr)"
+    "display_rank(pr)"
    ]
   },
   {
