Improved readability of code

--- a/fourth/Fourth.ipynb
+++ b/fourth/Fourth.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load the edge list and create a directed Graph\n",
+    "# Load the edge list and create a directed Graph\n",
     "with open(\"hamster.edgelist\", 'rb') as fh:\n",
     "    G = nx.read_edgelist(fh, create_using=nx.DiGraph())"
    ]
@@ -32,8 +32,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Calculate the PageRank for the nodes in directed graph G\n",
     "def pagerank(G):\n",
-    "    return pd.DataFrame.from_dict(nx.pagerank(G), orient='index').rename(columns={0: 'pr'})"
+    "    return pd.DataFrame.from_dict(nx.pagerank(G), orient='index').rename(columns={0: 'pagerank'})"
    ]
   },
   {
@@ -42,13 +43,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def vizualize(df):\n",
+    "# Visualize a pandas DataFrame\n",
+    "def visualize(df):\n",
     "    print('Pagerank distribution')\n",
-    "    df['pr'].plot.hist(bins=100)\n",
+    "    df['pagerank'].plot.hist(bins=100)\n",
+    "    plt.title('PageRank Distribution')\n",
     "    plt.show()\n",
     "    \n",
     "    print('Log scale')\n",
-    "    df['pr'].apply(np.log).plot.hist(bins=100)\n",
+    "    df['pagerank'].apply(np.log).plot.hist(bins=100)\n",
+    "    plt.title('PageRank Distribution (log scale)')\n",
     "    plt.show()"
    ]
   },
@@ -58,8 +62,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def rank(df):\n",
-    "    return df.sort_values(by='pr', ascending=False)"
+    "# Sort a pandas DataFrame by PageRank\n",
+    "def sort_by_pagerank(df):\n",
+    "    return df.sort_values(by='pagerank', ascending=False)"
    ]
   },
   {
@@ -68,10 +73,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Display some PageRank statistics from a pandas DataFrame\n",
     "def display_rank(df):\n",
-    "    ranking = rank(df)\n",
+    "    # Sort the DataFrame by PageRank\n",
+    "    ranking = sort_by_pagerank(df)\n",
+    "    \n",
     "    print(\"Top 10:\\n\")\n",
     "    display(ranking.head(10))\n",
+    "    \n",
     "    print(\"Lowest 10:\\n\")\n",
     "    display(ranking.tail(10))"
    ]
@@ -83,8 +92,8 @@
    "outputs": [],
    "source": [
     "def compute_error(base, df):\n",
-    "    br = rank(base)\n",
-    "    nr = rank(df)  "
+    "    br = sort_by_pagerank(base)\n",
+    "    nr = sort_by_pagerank(df)  "
    ]
   },
   {
