Add code to remove random leaf nodes (and their adjacent edges)

--- a/fourth/Fourth.ipynb
+++ b/fourth/Fourth.ipynb
@@ -97,6 +97,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Retrieve the nodes that have a certain in-degree and out-degree\n",
+    "def get_nodes_by_degree(graph, in_degree, out_degree):\n",
+    "    # Initialize a list to store the nodes in\n",
+    "    nodes = []\n",
+    "\n",
+    "    # Loop through all the nodes and the degrees\n",
+    "    for node in graph.nodes():\n",
+    "        if graph.in_degree(node) == in_degree and graph.out_degree(node) == out_degree:\n",
+    "            nodes.append(node)\n",
+    "\n",
+    "    return nodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_leaves(graph):\n",
+    "    return get_nodes_by_degree(graph, 1, 0)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -135,11 +164,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Graph with random leaves (and their edges) removed"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create a copy of the original graph\n",
+    "Gx = G.copy()\n",
+    "\n",
+    "# Randomly remove leaves from the graph\n",
+    "leaves = get_leaves(Gx)\n",
+    "leaf_edges = Gx.in_edges(leaves)\n",
+    "\n",
+    "# Remove edges only\n",
+    "# Gx.remove_edges_from(random.sample(list(leaf_edges), 20*len(leaf_edges)//100))\n",
+    "\n",
+    "# Remove both edges and nodes\n",
+    "Gx.remove_nodes_from(random.sample(leaves, 20*len(leaves)//100))\n",
+    "\n",
+    "# Calculate the PageRank\n",
+    "pr = pagerank(Gx)\n",
+    "\n",
+    "# Show some statistics about the new graph\n",
+    "visualize(pr)\n",
+    "display_rank(pr)"
+   ]
   }
  ],
  "metadata": {
