fourth: fix visualize references

--- a/fourth/Fourth.ipynb
+++ b/fourth/Fourth.ipynb
@@ -139,7 +139,7 @@
    "outputs": [],
    "source": [
     "base = pagerank(G)\n",
-    "vizualize(base)\n",
+    "visualize(base)\n",
     "display_rank(base)"
    ]
   },
@@ -159,7 +159,7 @@
     "Gx = G.copy()\n",
     "Gx.remove_edges_from(random.sample(G.edges(), 20*G.number_of_edges()//100))\n",
     "pr = pagerank(Gx)\n",
-    "vizualize(pr)\n",
+    "visualize(pr)\n",
     "display_rank(pr)"
    ]
   },
