Added visualize png saves

--- a/fourth/Fourth.ipynb
+++ b/fourth/Fourth.ipynb
@@ -44,15 +44,17 @@
    "outputs": [],
    "source": [
     "# Visualize a pandas DataFrame\n",
-    "def visualize(df):\n",
+    "def visualize(df, name=\"graph\"):\n",
     "    print('Pagerank distribution')\n",
     "    df['pagerank'].plot.hist(bins=100)\n",
     "    plt.title('PageRank Distribution')\n",
+    "    plt.savefig(name + \".png\", bbox_inches='tight')\n",
     "    plt.show()\n",
     "    \n",
     "    print('Log scale')\n",
     "    df['pagerank'].apply(np.log).plot.hist(bins=100)\n",
     "    plt.title('PageRank Distribution (log scale)')\n",
+    "    plt.savefig(name + \"_log.png\", bbox_inches='tight')\n",
     "    plt.show()"
    ]
   },
@@ -135,11 +137,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "base = pagerank(G)\n",
-    "visualize(base)\n",
+    "visualize(base, \"original\")\n",
     "display_rank(base)"
    ]
   },
@@ -159,7 +163,7 @@
     "Gx = G.copy()\n",
     "Gx.remove_edges_from(random.sample(G.edges(), 20*G.number_of_edges()//100))\n",
     "pr = pagerank(Gx)\n",
-    "visualize(pr)\n",
+    "visualize(pr, \"random_edges_removed\")\n",
     "display_rank(pr)"
    ]
   },
@@ -173,7 +177,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Create a copy of the original graph\n",
@@ -193,7 +199,7 @@
     "pr = pagerank(Gx)\n",
     "\n",
     "# Show some statistics about the new graph\n",
-    "visualize(pr)\n",
+    "visualize(pr, \"random_leaves_removed\")\n",
     "display_rank(pr)"
    ]
   }
