--- a/fourth/Fourth.ipynb
+++ b/fourth/Fourth.ipynb
@@ -123,8 +123,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get the leaf nodes of a graph\n",
     "def get_leaves(graph):\n",
     "    return get_nodes_by_degree(graph, 1, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Retrieve some statistics per node\n",
+    "def get_node_statistics(graph):\n",
+    "    # Initialize a list to store the nodes in\n",
+    "    nodes = []\n",
+    "\n",
+    "    for node in graph.nodes():\n",
+    "        in_degree = graph.in_degree(node)\n",
+    "        out_degree = graph.out_degree(node)\n",
+    "\n",
+    "        nodes.append({\n",
+    "            'node': node,\n",
+    "            'in_degree': in_degree,\n",
+    "            'out_degree': out_degree,\n",
+    "            'sum': in_degree + out_degree\n",
+    "        })\n",
+    "        \n",
+    "    return pd.DataFrame.from_records(nodes, index='node')"
    ]
   },
   {
@@ -202,6 +228,69 @@
     "visualize(pr, \"random_leaves_removed\")\n",
     "display_rank(pr)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Graph with most connected nodes removed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a copy of the original graph\n",
+    "Gx = G.copy()\n",
+    "\n",
+    "# Sort list in descending order\n",
+    "connected = get_node_statistics(Gx).sort_values(['sum'], ascending=False)\n",
+    "\n",
+    "# Select the x most connected nodes, where x is random\n",
+    "most_connected = connected.head(random.randint(1, 20*len(connected)//100))\n",
+    "\n",
+    "# Remove some of the most connected nodes\n",
+    "Gx.remove_nodes_from(most_connected.index.tolist())\n",
+    "\n",
+    "# Calculate the PageRank\n",
+    "pr = pagerank(Gx)\n",
+    "\n",
+    "# Show some statistics about the new graph\n",
+    "visualize(pr)\n",
+    "display_rank(pr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Node Statistics Lookup:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a copy of the original graph\n",
+    "Gx = G.copy()\n",
+    "\n",
+    "stats = get_node_statistics(Gx)\n",
+    "\n",
+    "node = 34\n",
+    "\n",
+    "display(stats.iloc[node-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
