--- a/fourth/Fourth.ipynb
+++ b/fourth/Fourth.ipynb
@@ -32,17 +32,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate the PageRank for the nodes in directed graph G\n",
-    "def pagerank(G):\n",
-    "    return pd.DataFrame.from_dict(nx.pagerank(G), orient='index').rename(columns={0: 'pagerank'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Visualize a pandas DataFrame\n",
     "def visualize(df, name=\"graph\"):\n",
     "    print('Pagerank distribution')\n",
@@ -66,7 +55,18 @@
    "source": [
     "# Sort a pandas DataFrame by PageRank\n",
     "def sort_by_pagerank(df):\n",
-    "    return df.sort_values(by='pagerank', ascending=False)"
+    "    return df.sort_values(by='pagerank', ascending=False).reset_index().rename(columns={'index':'name'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the PageRank for the nodes in directed graph G\n",
+    "def pagerank(G):\n",
+    "    return pd.DataFrame.from_dict(nx.pagerank(G), orient='index').rename(columns={0: 'pagerank'})"
    ]
   },
   {
@@ -77,14 +77,13 @@
    "source": [
     "# Display some PageRank statistics from a pandas DataFrame\n",
     "def display_rank(df):\n",
-    "    # Sort the DataFrame by PageRank\n",
-    "    ranking = sort_by_pagerank(df)\n",
+    "    df = sort_by_pagerank(df)\n",
     "    \n",
     "    print(\"Top 10:\\n\")\n",
-    "    display(ranking.head(10))\n",
+    "    display(df.head(10))\n",
     "    \n",
     "    print(\"Lowest 10:\\n\")\n",
-    "    display(ranking.tail(10))"
+    "    display(df.tail(10))"
    ]
   },
   {
@@ -93,9 +92,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_error(base, df):\n",
+    "def rank_error(df, base):\n",
+    "    nr = sort_by_pagerank(df) \n",
     "    br = sort_by_pagerank(base)\n",
-    "    nr = sort_by_pagerank(df)  "
+    "    \n",
+    "    display(nr)\n",
+    "    e = 0\n",
+    "    for (i,r) in base.iterrows():\n",
+    "        #e += abs(r.rank - nr['name' == r.name][0])\n",
+    "        display(r.rank)\n",
+    "        display(nr[nr['name' == r.name]][0])\n",
+    "    \n",
+    "   # return br.apply(lambda r: r., axis='columns')"
    ]
   },
   {
@@ -191,6 +199,15 @@
     "pr = pagerank(Gx)\n",
     "visualize(pr, \"random_edges_removed\")\n",
     "display_rank(pr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rank_error(pr, base)"
    ]
   },
   {
