fourth: construct table, count errors

--- a/fourth/Fourth.ipynb
+++ b/fourth/Fourth.ipynb
@@ -55,7 +55,9 @@
    "source": [
     "# Sort a pandas DataFrame by PageRank\n",
     "def sort_by_pagerank(df):\n",
-    "    return df.sort_values(by='pagerank', ascending=False).reset_index().rename(columns={'index':'name'})"
+    "    df = df.sort_values(by='pagerank', ascending=False).reset_index().rename_axis('rank').reset_index().set_index('id')\n",
+    "    df['rank'] += 1\n",
+    "    return df"
    ]
   },
   {
@@ -66,7 +68,7 @@
    "source": [
     "# Calculate the PageRank for the nodes in directed graph G\n",
     "def pagerank(G):\n",
-    "    return pd.DataFrame.from_dict(nx.pagerank(G), orient='index').rename(columns={0: 'pagerank'})"
+    "    return sort_by_pagerank(pd.DataFrame.from_dict(nx.pagerank(G), orient='index').rename(columns={0: 'pagerank'}).rename_axis('id'))"
    ]
   },
   {
@@ -92,18 +94,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def rank_error(df, base):\n",
-    "    nr = sort_by_pagerank(df) \n",
-    "    br = sort_by_pagerank(base)\n",
-    "    \n",
-    "    display(nr)\n",
-    "    e = 0\n",
-    "    for (i,r) in base.iterrows():\n",
-    "        #e += abs(r.rank - nr['name' == r.name][0])\n",
-    "        display(r.rank)\n",
-    "        display(nr[nr['name' == r.name]][0])\n",
-    "    \n",
-    "   # return br.apply(lambda r: r., axis='columns')"
+    "def rank_error(df):\n",
+    "    return df.apply(lambda r: abs(r['rank'] - r['rank_base'])/r['rank_base'], axis='columns').sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pagerank_error(df):\n",
+    "    return df.apply(lambda r: abs(r['pagerank'] - r['pagerank_base'])/r['rank_base'], axis='columns').sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def errors_of(i, df):\n",
+    "    df = df.rename(columns={'pagerank_{0}'.format(i):'pagerank','rank_{0}'.format(i):'rank'})\n",
+    "    return (rank_error(df), pagerank_error(df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def display_errors(df):\n",
+    "    display(\"Rank error: {0}\".format(rank_error(df)))\n",
+    "    display(\"Pagerank error: {0}\".format(pagerank_error(df)))"
    ]
   },
   {
@@ -176,9 +200,18 @@
    },
    "outputs": [],
    "source": [
-    "base = pagerank(G)\n",
-    "visualize(base, \"original\")\n",
-    "display_rank(base)"
+    "df = pagerank(G)\n",
+    "visualize(df, \"base\")\n",
+    "df = df.rename(columns={'rank':'rank_base','pagerank':'pagerank_base'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random.seed(420) # ensure output is deterministic"
    ]
   },
   {
@@ -198,16 +231,9 @@
     "Gx.remove_edges_from(random.sample(G.edges(), 20*G.number_of_edges()//100))\n",
     "pr = pagerank(Gx)\n",
     "visualize(pr, \"random_edges_removed\")\n",
-    "display_rank(pr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rank_error(pr, base)"
+    "df = pd.merge(df, pr, left_index=True, right_index=True)\n",
+    "display_errors(df)\n",
+    "df = df.rename(columns={'pagerank':'pagerank_1','rank':'rank_1'})"
    ]
   },
   {
@@ -233,17 +259,19 @@
     "leaf_edges = Gx.in_edges(leaves)\n",
     "\n",
     "# Remove edges only\n",
-    "# Gx.remove_edges_from(random.sample(list(leaf_edges), 20*len(leaf_edges)//100))\n",
+    "Gx.remove_edges_from(random.sample(list(leaf_edges), 20*len(leaf_edges)//100))\n",
     "\n",
     "# Remove both edges and nodes\n",
-    "Gx.remove_nodes_from(random.sample(leaves, 20*len(leaves)//100))\n",
+    "# Gx.remove_nodes_from(random.sample(leaves, 20*len(leaves)//100))\n",
     "\n",
     "# Calculate the PageRank\n",
     "pr = pagerank(Gx)\n",
     "\n",
     "# Show some statistics about the new graph\n",
     "visualize(pr, \"random_leaves_removed\")\n",
-    "display_rank(pr)"
+    "df = pd.merge(df, pr, left_index=True, right_index=True)\n",
+    "display_errors(df)\n",
+    "df = df.rename(columns={'pagerank':'pagerank_2','rank':'rank_2'})"
    ]
   },
   {
@@ -276,7 +304,18 @@
     "\n",
     "# Show some statistics about the new graph\n",
     "visualize(pr)\n",
-    "display_rank(pr)"
+    "df = pd.merge(df, pr, left_index=True, right_index=True)\n",
+    "display_errors(df)\n",
+    "df = df.rename(columns={'pagerank':'pagerank_3','rank':'rank_3'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(df.head(20), df.tail(20))"
    ]
   },
   {
